helm/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoapp-frontend
  namespace: todo-app
spec:
  selector:
    matchLabels:
      app: todoapp-frontend
  template:
    metadata:
      labels:
        app: todoapp-frontend
    spec:
      containers:
        - name: todoapp-frontend
          image: registry.digitalocean.com/debjotimallick/todoapp-frontend:d37281e
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: do-cr-pullsecret
---
apiVersion: v1
kind: Service
metadata:
  name: todoapp-frontend
  namespace: todo-app
spec:
  selector:
    app: todoapp-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
