helm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todoapp-frontend
  labels:
    name: todoapp-frontend
spec:
  rules:
    - host: todo.debjotimallick.is-a.dev
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: todoapp-frontend-svc
                port:
                  number: 80
